--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400;700" rel="stylesheet">
+
     <title>React App</title>
   </head>
   <body>
@@ -17,5 +20,41 @@
       To begin the development, run `npm start` in this folder.
       To create a production bundle, use `npm run build`.
     -->
+    <div class="container">
+      <h1>Pomodoro App</h1>
+      <div class="app">
+        <section class="main">
+          <div class="timer">
+            <div class="timer__clock">
+              <h2>Working</h2>
+              <span>20:10</span>
+            </div>
+            <div class="load-bar"><div class="load-bar__bar"></div></div>
+            <div class="timer__control">
+              <i class="ion-stop"></i>
+              <i class="ion-play"></i>
+            </div>
+          </div>
+        </section>
+        <section class="controls">
+          <section class="control">
+            <i class="ion-minus"></i>
+            <div class="control__number">
+              <h3>Session</h3>
+              <span>25</span>
+            </div>
+            <i class="ion-plus"></i>
+          </section>
+          <section class="control">
+            <i class="ion-minus"></i>
+            <div class="control__number">
+              <h3>Break</h3>
+              <span>5</span>
+            </div>
+            <i class="ion-plus"></i>
+          </section>
+        </section>
+      </div>
+    </div>
   </body>
 </html>
