--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       To begin the development, run `npm start` in this folder.
       To create a production bundle, use `npm run build`.
     -->
-    <div class="container">
+    <!-- <div class="container">
       <h1>Pomodoro App</h1>
       <div class="app">
         <section class="main">
@@ -55,6 +55,6 @@
           </section>
         </section>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
