--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400;700" rel="stylesheet">
 
-    <title>React App</title>
+    <title>Pomodoro</title>
   </head>
   <body>
     <div id="root"></div>
